--- a/.gitignore
+++ b/.gitignore
@@ -177,6 +177,6 @@ xcuserdata/
 gradle.properties
 
 ## for deployement
-##deployment/*.jks
-##deployment/*.keystore
-##deployment/signin.gradle
+deployment/*.jks
+deployment/*.keystore
+deployment/signin.gradle
