--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,11 +16,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation deps.kotlin.stdlib
+    implementation deps.support.app_compat
+    implementation deps.support.constraint
+
+    //test dependencies
+    testImplementation deps.junit
+    androidTestImplementation deps.support.test_runner
+    androidTestImplementation deps.support.espresso_core
 }
