set all version with versions.gradle file vars

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,13 +4,13 @@ apply plugin: 'kotlin-android-extensions'
 apply from: '../deployment/signing.gradle'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion build_versions.target_sdk
     defaultConfig {
         applicationId "com.amarinag.amgmoviedb"
-        minSdkVersion 19
-        targetSdkVersion 27
+        minSdkVersion build_versions.min_sdk
+        targetSdkVersion build_versions.target_sdk
         versionCode 1
-        versionName "1.0"
+        versionName "0.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 }
