--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,12 @@ dependencies {
     implementation deps.support.constraint
     implementation deps.lifecycle.extensions
     implementation deps.timber
+    implementation deps.dagger.runtime
+    implementation deps.dagger.android
+    implementation deps.dagger.android_support
 
+    kapt deps.dagger.compiler
+    kapt deps.dagger.android_support_compiler
     kapt deps.databinding_compiler
     kapt deps.lifecycle.compiler
 
