--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,8 @@ android {
         versionCode 1
         versionName "0.0.1"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        buildConfigField "String", "BASE_URL", "\"https://api.themoviedb.org/3/movie/\""
+        buildConfigField "String", "MOVIEDB_API", "\"b66ffea8276ce576d60df52600822c88\""
     }
     dataBinding {
         enabled = true
@@ -28,6 +30,12 @@ dependencies {
     implementation deps.dagger.runtime
     implementation deps.dagger.android
     implementation deps.dagger.android_support
+    implementation deps.retrofit.runtime
+    implementation deps.retrofit.gson
+    implementation deps.stetho.core
+    implementation deps.stetho.okhttp3
+    implementation deps.okhttp3.okhttp
+    implementation deps.okhttp3.logging_interceptor
 
     kapt deps.dagger.compiler
     kapt deps.dagger.android_support_compiler
