--- a/versions.gradle
+++ b/versions.gradle
@@ -9,6 +9,8 @@ versions.timber = "4.6.1"
 versions.stetho = "1.5.0"
 versions.leak_canary = "1.5.4"
 versions.dagger = "2.14.1"
+versions.retrofit = "2.4.0"
+versions.okhttp3 = "3.10.0"
 
 versions.junit = "4.12"
 versions.support_runner = "1.0.1"
@@ -48,7 +50,12 @@ retrofit.runtime = "com.squareup.retrofit2:retrofit:$versions.retrofit"
 retrofit.gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
 retrofit.mock = "com.squareup.retrofit2:retrofit-mock:$versions.retrofit"
 deps.retrofit = retrofit
-deps.okhttp_logging_interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp_logging_interceptor"
+
+def okhttp3 = [:]
+okhttp3.okhttp = "com.squareup.okhttp3:okhttp:$versions.okhttp3"
+okhttp3.mockwebserver = "com.squareup.okhttp3:mockwebserver:$versions.okhttp3"
+okhttp3.logging_interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp3"
+deps.okhttp3 = okhttp3
 
 def dagger = [:]
 dagger.runtime = "com.google.dagger:dagger:$versions.dagger"
@@ -69,11 +76,15 @@ leakcanary.debug = "com.squareup.leakcanary:leakcanary-android:$versions.leak_ca
 leakcanary.no_op = "com.squareup.leakcanary:leakcanary-android-no-op:$versions.leak_canary"
 deps.leakcanary = leakcanary
 
+def stetho = [:]
+stetho.core = "com.facebook.stetho:stetho:$versions.stetho"
+stetho.okhttp3 = "com.facebook.stetho:stetho-okhttp3:$versions.stetho"
+deps.stetho = stetho
 
 deps.timber = "com.jakewharton.timber:timber:$versions.timber"
 deps.databinding_compiler = "com.android.databinding:compiler:$versions.databinding_compiler"
 deps.junit = "junit:junit:$versions.junit"
-deps.stetho = "com.facebook.stetho:stetho:$versions.stetho"
+
 deps.rxjava2 = "io.reactivex.rxjava2:rxjava:$versions.rxjava2"
 deps.rx_android = "io.reactivex.rxjava2:rxandroid:$versions.rx_android"
 deps.android_git_version = "gradle.plugin.com.gladed.gradle.androidgitversion:gradle-android-git-version:$versions.android_git_version"
