--- a/versions.gradle
+++ b/versions.gradle
@@ -79,9 +79,9 @@ leakcanary.no_op = "com.squareup.leakcanary:leakcanary-android-no-op:$versions.l
 deps.leakcanary = leakcanary
 
 def glide = [:]
-glide.runtime = "com.github.bumptech.glide:glide:$glide_version"
-glide.okhttp3_integration = "com.github.bumptech.glide:okhttp3-integration:$glide_version@aar"
-glide.compiler = "com.github.bumptech.glide:compiler:$glide_version"
+glide.runtime = "com.github.bumptech.glide:glide:$versions.glide_version"
+glide.okhttp3_integration = "com.github.bumptech.glide:okhttp3-integration:$versions.glide_version@aar"
+glide.compiler = "com.github.bumptech.glide:compiler:$gversions.lide_version"
 deps.glide = glide
 
 leakcanary.debug = "com.squareup.leakcanary:leakcanary-android:$versions.leak_canary"
