--- a/versions.gradle
+++ b/versions.gradle
@@ -81,7 +81,7 @@ deps.leakcanary = leakcanary
 def glide = [:]
 glide.runtime = "com.github.bumptech.glide:glide:$versions.glide_version"
 glide.okhttp3_integration = "com.github.bumptech.glide:okhttp3-integration:$versions.glide_version@aar"
-glide.compiler = "com.github.bumptech.glide:compiler:$gversions.lide_version"
+glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide_version"
 deps.glide = glide
 
 leakcanary.debug = "com.squareup.leakcanary:leakcanary-android:$versions.leak_canary"
