--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,7 @@ android {
         buildConfigField "String", "BASE_URL", "\"https://api.themoviedb.org/3/movie/\""
         buildConfigField "String", "IMAGE_URL", "\"https://image.tmdb.org/t/p/w500\""
         buildConfigField "String", "MOVIEDB_API", "\"b66ffea8276ce576d60df52600822c88\""
+        vectorDrawables.useSupportLibrary = true
     }
     dataBinding {
         enabled = true
