--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.amarinag.amgmoviedb">
 
   <uses-permission android:name="android.permission.INTERNET" />
+
   <application
       android:name=".App"
       android:allowBackup="true"
@@ -11,13 +12,16 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/AppTheme">
-    <activity android:name="com.amarinag.amgmoviedb.ui.main.MainActivity">
+    <activity android:name=".ui.main.MainActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
 
         <category android:name="android.intent.category.LAUNCHER" />
       </intent-filter>
     </activity>
+    <activity
+        android:name=".ui.detail.DetailActivity"
+        android:theme="@style/AppTheme.NoActionBar" />
   </application>
 
 </manifest>
