--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     </activity>
     <activity
         android:name=".ui.detail.DetailActivity"
+        android:parentActivityName=".ui.main.MainActivity"
         android:theme="@style/AppTheme.NoActionBar" />
   </application>
 
