--- a/versions.gradle
+++ b/versions.gradle
@@ -11,6 +11,7 @@ versions.leak_canary = "1.5.4"
 versions.dagger = "2.14.1"
 versions.retrofit = "2.4.0"
 versions.okhttp3 = "3.10.0"
+versions.okhttp3_idling_resource = "1.0.0"
 versions.glide_version = "4.7.1"
 
 versions.junit = "4.12"
@@ -30,6 +31,8 @@ support.constraint = "com.android.support.constraint:constraint-layout:$versions
 support.design = "com.android.support:design:$versions.support"
 support.test_runner = "com.android.support.test:runner:$versions.support_runner"
 support.espresso_core = "com.android.support.test.espresso:espresso-core:$versions.espresso"
+support.espresso_idling_resource = "com.android.support.test.espresso:espresso-idling-resource:$versions.espresso"
+
 deps.support = support
 
 def lifecycle = [:]
@@ -57,6 +60,7 @@ def okhttp3 = [:]
 okhttp3.okhttp = "com.squareup.okhttp3:okhttp:$versions.okhttp3"
 okhttp3.mockwebserver = "com.squareup.okhttp3:mockwebserver:$versions.okhttp3"
 okhttp3.logging_interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp3"
+okhttp3.okhttp3_idling_resource = "com.jakewharton.espresso:okhttp3-idling-resource:$versions.okhttp3_idling_resource"
 deps.okhttp3 = okhttp3
 
 def dagger = [:]
@@ -83,10 +87,6 @@ glide.runtime = "com.github.bumptech.glide:glide:$versions.glide_version"
 glide.okhttp3_integration = "com.github.bumptech.glide:okhttp3-integration:$versions.glide_version@aar"
 glide.compiler = "com.github.bumptech.glide:compiler:$versions.glide_version"
 deps.glide = glide
-
-leakcanary.debug = "com.squareup.leakcanary:leakcanary-android:$versions.leak_canary"
-leakcanary.no_op = "com.squareup.leakcanary:leakcanary-android-no-op:$versions.leak_canary"
-deps.leakcanary = leakcanary
 
 def stetho = [:]
 stetho.core = "com.facebook.stetho:stetho:$versions.stetho"
